Add left slider

--- a/src/partials/20_section-promotion.html
+++ b/src/partials/20_section-promotion.html
@@ -1,11 +1,10 @@
 <div class="section-promotion">
-  <div class="container">
-    <div class="row">
-      <div class="col-4 product-card">
-        <div class="row">
+  <div class="container ">
+    <div class="row row-eq-height promotion-row">
+      <div class="col-4 ">
+        <div class="promotion-wrapper mr-1 product-card">
           <div class="panel">
             <div class="col-auto heading"><h5>Hot deals</h5></div>
-
             <div class="dots1">
               <ul>
                 <li><a href="#" class="active"></a></li>
@@ -14,15 +13,16 @@
               </ul>
             </div>
           </div>
-          <div class="product-box">
-            <div class="photo">
+
+          <div class="promotion-box">
+            <div class="photo-container p-0">
               <img src="../src/images//furniture1.jpeg" alt="furniture1" />
-              <div class="buttons">
+              <div class="promotion-button">
                 <a href="#" class="btn-main-small"
-                  ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  ><i class="fa fa-shopping-basket"></i>ADD TO CART</a
                 >
               </div>
-              <div class="timer">
+              <div class="timer mx-1">
                 <span>25 days</span> <span>10 hrs</span> <span>45 mins</span>
                 <span>30 secs</span>
               </div>
@@ -42,13 +42,36 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="old-price">$ 200.00</div>
+                <div class="old-price btn-main-small no-hover">$ 200.00</div>
                 <div class="btn-main-small no-hover">$ 300.00</div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-8 slider"></div>
+      </div>
+      <div class="col-8 slider">
+        <div class="slider-wrapper">
+          <div class="col-auto h-1 p-0">
+            <img
+              src="../src/images/furniture2.jpeg"
+              class="img-fluid"
+              alt="First slide"
+            />
+            <div class="promotion-title">
+              <h3>indoor furniture</h3>
+              <p>Save up to 50% of all furniture</p>
+              <div class="btn-main-small no-hover">shop now</div>
+            </div>
+          </div>
+          <div class="row slider-row">
+            <div class="col-6 control-left pr-0">
+              <a href="#"><i class="fas fa-angle-left"></i></a>
+            </div>
+            <div class="col-6 control-right pl-0">
+              <a href="#"><i class="fas fa-angle-right"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
