--- a/src/partials/40_promotions.html
+++ b/src/partials/40_promotions.html
@@ -1,14 +1,12 @@
 <div class="wrapper">
   <section class="main-promotion">
     <div class="description">
-      <div class="box">
-        <h1>guest room<br /><span class="sofa"> sofa</span></h1>
-        <div class="discount"><h2>-20%</h2></div>
-      </div>
+      <h1>guest room<br /><span>sofa</span></h1>
+      <div class="discount"><h2>-20%</h2></div>
     </div>
   </section>
   <section class="other-promotions">
-    <article class="second-promotion">
+    <article class="promo-box second-promotion">
       <h1>
         <span class="office">office</span> chair<br /><span class="collection"
           >collection</span
@@ -16,7 +14,7 @@
       </h1>
       <h2>$200.00</h2>
     </article>
-    <article class="third-promotion">
+    <article class="promo-box third-promotion">
       <h2><span class="special">special</span> collection</h2>
       <p>save up 45% of furniture</p>
     </article>
