--- a/src/sass/components/_promotions.scss
+++ b/src/sass/components/_promotions.scss
@@ -1,64 +1,178 @@
 .wrapper {
+  max-width: 1140px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
   box-sizing: border-box;
+  padding-bottom: 60px;
+  margin: -50px auto 0 auto;
+  padding: 0 15px;
 
   .main-promotion {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 555px;
+    width: 540px;
     height: 420px;
     background-image: url("../images/promotions/living-room.png");
     background-size: cover;
 
     .description {
+      position: relative;
       width: 489px;
       height: 355px;
       background-color: #2a2a2a;
-      opacity: 0.4;
       justify-content: flex-start;
+      opacity: 0.4;
 
-      .box {
-        width: 250px;
-        height: 250px;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        flex-direction: column;
+      h1 {
+        padding: 123px 0 0 20px;
+        color: #ffffff;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 54px;
+        text-transform: uppercase;
 
-        h1 {
-          color: #ffffff;
-          font-size: 36px;
-          font-weight: 400;
-          line-height: 54px;
+        span {
+          position: absolute;
+          bottom: 122px;
+          left: 20px;
+          font-size: 60px;
           text-transform: uppercase;
-          margin-left: 20px;
-
-          .sofa {
-            font-size: 60px;
-          }
-        }
-
-        .discount {
-          width: 160px;
-          height: 83px;
-          border: 5px solid #ffffff;
-          text-align: center;
-          margin-left: -40px;
-
-          h2 {
-            color: #ffffff;
-            font-family: "Poppins - Semi Bold";
-            font-size: 50px;
-            font-weight: 400;
-            line-height: 55.72px;
-            text-transform: uppercase;
-            padding-top: 8px;
-          }
+          color: #fff;
         }
       }
+
+      .discount {
+        position: absolute;
+        left: 20px;
+        bottom: 21px;
+        width: 160px;
+        height: 83px;
+        border: 5px solid #ffffff;
+        text-align: center;
+
+        h2 {
+          color: #ffffff;
+          font-family: "Poppins - Semi Bold";
+          font-size: 50px;
+          font-weight: 700;
+          line-height: 55.72px;
+          text-transform: uppercase;
+          padding-top: 8px;
+        }
+      }
+    }
+  }
+
+  .other-promotions {
+    width: 540px;
+    height: 420px;
+    display: flex;
+    flex-direction: column;
+
+    .promo-box {
+      height: 195px;
+      display: flex;
+      flex-direction: column;
+
+      &.second-promotion {
+        background-image: url("../images/promotions/iocenters.png");
+        background-size: cover;
+        margin-bottom: 30px;
+        justify-content: center;
+        align-items: center;
+
+        h1 {
+          color: #000000;
+          font-size: 30px;
+          font-weight: 400;
+          line-height: 26px;
+          text-transform: uppercase;
+
+          .office {
+            font-weight: 600;
+          }
+
+          .collection {
+            font-size: 18px;
+            font-weight: 600;
+            letter-spacing: 3.6px;
+          }
+        }
+
+        h2 {
+          color: #d58e32;
+          font-size: 36px;
+          font-weight: 600;
+          line-height: 54px;
+          text-transform: uppercase;
+          margin-left: -50px;
+        }
+      }
+
+      &.third-promotion {
+        background-image: url("../images/promotions/salon.png");
+        background-size: cover;
+
+        h2 {
+          color: #d58e32;
+          font-size: 24px;
+          font-weight: 400;
+          text-transform: uppercase;
+          text-align: right;
+          padding: 76px 25px 13px 25px;
+
+          .special {
+            font-weight: 600;
+          }
+        }
+
+        p {
+          color: #000000;
+          font-size: 18px;
+          font-weight: 400;
+          text-transform: uppercase;
+          text-align: right;
+          padding-right: 25px;
+          margin-top: -15px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 662px) {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+
+    .main-promotion {
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    .other-promotions {
+      width: 100%;
+      margin: 0 auto;
+    }
+  }
+}
+
+@media (max-width: 1100px) {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+
+    .main-promotion {
+      margin: 0 auto 30px auto;
+    }
+
+    .other-promotions {
+      margin: 0 auto;
+      text-align: center;
     }
   }
 }
