--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -172,17 +172,13 @@
                       <!-- Wrapper for slides -->
                       <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                          <img src="images/black-chair.png" alt="..." />
+                          <img src="images/black-crown.png" alt="..." />
                         </div>
                         <div class="item">
                           <img src="images/black-chair.png" alt="..." />
                         </div>
-                        <div class="item">
-                          <img src="images/black-chair.png" alt="..." />
-                        </div>
-                        <div class="item">
-                          <img src="images/black-chair.png" alt="..." />
-                        </div>
+                        <div class="item"><img src="images/Bed.png" alt="..." /></div>
+                        <div class="item"><img src="images/Bed.png" alt="..." /></div>
                         <div class="item">
                           <img src="images/black-chair.png" alt="..." />
                         </div>
@@ -203,26 +199,13 @@
                         href="#carousel-example-generic"
                         role="button"
                         data-slide="prev"
-                      >
-                        <span
-                          class="glyphicon glyphicon-chevron-left left-control"
-                          aria-hidden="true"
-                        ></span>
-                        <span class="sr-only">Previous</span>
-                      </a>
+                      ></a>
                       <a
                         class="right carousel-control"
                         href="#carousel-example-generic"
                         role="button"
                         data-slide="next"
-                      >
-                        <span
-                          class="glyphicon glyphicon-chevron-right right-control"
-                          aria-hidden="true"
-                        >
-                        </span>
-                        <span class="sr-only">Next</span>
-                      </a>
+                      ></a>
                     </div>
                   </div>
                 </div>
