--- a/src/sass/components/_gallery-box.scss
+++ b/src/sass/components/_gallery-box.scss
@@ -2,6 +2,13 @@ $gallery-border: 1px solid $container-border-color;
 $carousel-control-bg: #2a2a2a;
 $gallery-right-box-color: #e8edf7;
 $gallery-green-color: #79ae30;
+$product-slider-bg-color: #ccc;
+$product-info-bg-color: #fff;
+$price-circle-text-color: #fff;
+$price-circle-bg-color: #7b7b7ce3;
+$product-info-triangle-color: #000;
+$carousel-bg-color: #fff;
+$carousel-controls-color: #fff;
 
 %triangle-base {
   content: "";
@@ -64,7 +71,7 @@ $gallery-green-color: #79ae30;
             color: $text-color;
             text-decoration: none;
             border: $gallery-border;
-            border-right: 0px;
+            border-right: 0;
             border-left: $gallery-border;
           }
 
@@ -72,13 +79,13 @@ $gallery-green-color: #79ae30;
             color: $primary;
             background-color: $galllery-bg-color;
             border-top: 3px solid $primary;
-            border-left: 0px;
+            border-left: 0;
             border-bottom-color: transparent;
           }
 
           &.active ~ li.tab-list-element > a {
             border-right: $gallery-border;
-            border-left: 0px;
+            border-left: 0;
           }
         }
       }
@@ -92,10 +99,6 @@ $gallery-green-color: #79ae30;
         background-color: $galllery-bg-color;
         display: block;
         position: relative;
-
-        #featured {
-          //
-        }
 
         .tabpanel-content {
           z-index: 1;
@@ -124,7 +127,7 @@ $gallery-green-color: #79ae30;
             flex-direction: column;
             width: 250px;
             height: 100px;
-            background-color: #fff;
+            background-color: $product-info-bg-color;
             position: absolute;
             right: 0;
             bottom: 25%;
@@ -136,8 +139,8 @@ $gallery-green-color: #79ae30;
               justify-content: center;
               align-items: center;
               position: absolute;
-              color: #fff;
-              background-color: #7b7b7ce3;
+              color: $price-circle-text-color;
+              background-color: $price-circle-bg-color;
               border-radius: 50%;
               height: 100px;
               width: 100px;
@@ -151,15 +154,16 @@ $gallery-green-color: #79ae30;
                 font-size: 16px;
                 text-decoration: line-through;
               }
+            }
 
-              h5 {
-                font-size: 16px;
-              }
+            h5 {
+              font-size: 16px;
+              margin-top: 10px;
             }
 
             &::after {
               @extend %triangle-base;
-              border-top: 30px solid #000;
+              border-top: 30px solid $product-info-triangle-color;
               border-right: 30px solid transparent;
               top: 0;
               left: 0;
@@ -167,10 +171,23 @@ $gallery-green-color: #79ae30;
 
             &::before {
               @extend %triangle-base;
-              border-bottom: 30px solid #000;
+              border-bottom: 30px solid $product-info-triangle-color;
               border-left: 30px solid transparent;
               bottom: 0;
               right: 0;
+            }
+
+            .stars {
+              a {
+                text-decoration: none;
+                color: $text-color;
+                @extend .far;
+                @extend .fa-star;
+
+                &.full {
+                  @extend .fas;
+                }
+              }
             }
           }
 
@@ -194,7 +211,7 @@ $gallery-green-color: #79ae30;
             bottom: 0;
             max-height: 100px;
             max-width: 100%;
-            background-color: #fff;
+            background-color: $carousel-bg-color;
             border-top: $gallery-border;
             padding: 10px;
             display: flex;
@@ -205,21 +222,37 @@ $gallery-green-color: #79ae30;
               max-height: 70px;
               display: flex;
               flex-direction: row;
-              justify-content: center;
+              justify-content: flex-start;
               align-items: center;
               margin: 0 5px;
+              overflow-x: auto;
+
+              &::-webkit-scrollbar {
+                display: none;
+              }
 
               .item {
                 max-width: 70px;
+                height: 100%;
                 display: inline-flex;
                 justify-content: center;
                 align-items: center;
-                background-color: #ccc;
+                background-color: $product-slider-bg-color;
                 margin: 0 5px;
                 padding: 5px;
+                cursor: pointer;
 
                 img {
                   max-width: 60px;
+                }
+
+                &.active {
+                  opacity: 1;
+                  border: 2px solid $primary;
+                }
+
+                &:not(.active) {
+                  opacity: 0.3;
                 }
               }
             }
@@ -229,33 +262,29 @@ $gallery-green-color: #79ae30;
               top: 10px;
               bottom: 10px;
               width: 5%;
-              font-size: 20px;
-              color: #fff;
+              font-size: 14px;
+              color: $carousel-controls-color;
               text-align: center;
-              text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
               background: $carousel-control-bg;
+              text-decoration: none;
             }
+
             .carousel-control.left {
+              display: flex;
+              justify-content: center;
+              align-items: center;
               left: 5px;
-              font-size: 20px;
-
-              .left-control {
-                display: block;
-                position: absolute;
-                width: 15px;
-                top: 50%;
-                transform: translateY(-10px);
-                height: 20px;
-                color: #fff;
-                background-color: #fff;
-              }
+              @extend .fas;
+              @extend .fa-chevron-left;
             }
-            .carousel-control.right {
-              right: 5px;
 
-              .right-control {
-                //
-              }
+            .carousel-control.right {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              right: 5px;
+              @extend .fas;
+              @extend .fa-chevron-right;
             }
           }
         }
@@ -273,7 +302,7 @@ $gallery-green-color: #79ae30;
     padding: 15% 15%;
 
     .presentation-header-top {
-      color: #000;
+      color: $text-color;
       font-size: 1.2em;
       z-index: 2;
 
@@ -297,6 +326,7 @@ $gallery-green-color: #79ae30;
       border-radius: 5px;
       font-size: 0.8em;
       z-index: 2;
+      cursor: pointer;
     }
 
     .gallery-right-img-container {
