--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,3 +12,7 @@ $form-border-color: #292929;
 $container-border-color: #e1e1e1;
 
 $galllery-bg-color: #f4f5f7;
+
+$hover-transition-timing: 250ms;
+$bg-transition-timing: 250ms;
+$text-transition-timing: 250ms;
