--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -108,6 +108,51 @@
                         <a href="#"></a> <a href="#"></a> <a href="#"></a>
                       </div>
                     </div>
+                    <div class="img-box"></div>
+
+                    <div
+                      id="carousel-example-generic"
+                      class="carousel slide product-carousel"
+                      data-ride="carousel"
+                    >
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                          <img src="images/black-crown.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item"><img src="images/Bed.png" alt="..." /></div>
+                        <div class="item"><img src="images/Bed.png" alt="..." /></div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                      </div>
+
+                      <!-- Controls -->
+                      <a
+                        class="left carousel-control"
+                        href="#carousel-example-generic"
+                        role="button"
+                        data-slide="prev"
+                      ></a>
+                      <a
+                        class="right carousel-control"
+                        href="#carousel-example-generic"
+                        role="button"
+                        data-slide="next"
+                      ></a>
+                    </div>
                   </div>
                 </div>
                 <div role="tabpanel" class="tab-pane active" id="top-seller">
@@ -210,8 +255,204 @@
                   </div>
                 </div>
 
-                <div role="tabpanel" class="tab-pane" id="sale-off">sale off</div>
-                <div role="tabpanel" class="tab-pane" id="top-rated">top rated</div>
+                <div role="tabpanel" class="tab-pane" id="sale-off">
+                  <div class="tabpanel-content">
+                    <div class="outlines presentation-outlines">
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Add to favourite"
+                      >
+                        <i class="far fa-heart"></i>
+                      </a>
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Share"
+                      >
+                        <i class="fas fa-exchange-alt"></i>
+                      </a>
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Open In New Window"
+                      >
+                        <i class="fas fa-eye"></i>
+                      </a>
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Add To Cart"
+                      >
+                        <i class="fas fa-shopping-basket"></i>
+                      </a>
+                    </div>
+
+                    <div class="product-info">
+                      <div class="price-circle">
+                        <span class="new-price">$120.00</span>
+                        <span class="old-price">$160.00</span>
+                      </div>
+                      <h5>Aenean Ru Bristique</h5>
+                      <div class="stars">
+                        <a href="#" class="full"></a> <a href="#" class="full"></a>
+                        <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                      </div>
+                    </div>
+                    <div class="img-box"></div>
+
+                    <div
+                      id="carousel-example-generic"
+                      class="carousel slide product-carousel"
+                      data-ride="carousel"
+                    >
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                          <img src="images/black-crown.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item"><img src="images/Bed.png" alt="..." /></div>
+                        <div class="item"><img src="images/Bed.png" alt="..." /></div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                      </div>
+
+                      <!-- Controls -->
+                      <a
+                        class="left carousel-control"
+                        href="#carousel-example-generic"
+                        role="button"
+                        data-slide="prev"
+                      ></a>
+                      <a
+                        class="right carousel-control"
+                        href="#carousel-example-generic"
+                        role="button"
+                        data-slide="next"
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="top-rated">
+                  <div class="tabpanel-content">
+                    <div class="outlines presentation-outlines">
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Add to favourite"
+                      >
+                        <i class="far fa-heart"></i>
+                      </a>
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Share"
+                      >
+                        <i class="fas fa-exchange-alt"></i>
+                      </a>
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Open In New Window"
+                      >
+                        <i class="fas fa-eye"></i>
+                      </a>
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Add To Cart"
+                      >
+                        <i class="fas fa-shopping-basket"></i>
+                      </a>
+                    </div>
+
+                    <div class="product-info">
+                      <div class="price-circle">
+                        <span class="new-price">$120.00</span>
+                        <span class="old-price">$160.00</span>
+                      </div>
+                      <h5>Aenean Ru Bristique</h5>
+                      <div class="stars">
+                        <a href="#" class="full"></a> <a href="#" class="full"></a>
+                        <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                      </div>
+                    </div>
+                    <div class="img-box"></div>
+
+                    <div
+                      id="carousel-example-generic"
+                      class="carousel slide product-carousel"
+                      data-ride="carousel"
+                    >
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                          <img src="images/black-crown.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item"><img src="images/Bed.png" alt="..." /></div>
+                        <div class="item"><img src="images/Bed.png" alt="..." /></div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                      </div>
+
+                      <!-- Controls -->
+                      <a
+                        class="left carousel-control"
+                        href="#carousel-example-generic"
+                        role="button"
+                        data-slide="prev"
+                      ></a>
+                      <a
+                        class="right carousel-control"
+                        href="#carousel-example-generic"
+                        role="button"
+                        data-slide="next"
+                      ></a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
