Work on left side of the section

--- a/src/partials/20_section-promotion.html
+++ b/src/partials/20_section-promotion.html
@@ -58,9 +58,10 @@
               alt="First slide"
             />
             <div class="promotion-title">
+              <!-- <div class="opacity-curtain">test</div> -->
               <h3>indoor furniture</h3>
               <p>Save up to 50% of all furniture</p>
-              <div class="btn-main-small no-hover">shop now</div>
+              <div class="btn-main no-hover shop-button">shop now</div>
             </div>
           </div>
           <div class="row slider-row">
