Finish the task

--- a/src/partials/20_section-promotional.html
+++ b/src/partials/20_section-promotional.html
@@ -1,11 +1,11 @@
-<div class="section-promotion">
+<div class="section-promotional">
   <div class="container ">
-    <div class="row row-eq-height promotion-row">
+    <div class="row">
       <div class="col-4 ">
-        <div class="promotion-wrapper mr-1 product-card">
+        <div class="mr-1 product-card">
           <div class="panel">
             <div class="col-auto heading"><h5>Hot deals</h5></div>
-            <div class="dots1">
+            <div class="promotional-dots">
               <ul>
                 <li><a href="#" class="active"></a></li>
                 <li><a href="#"></a></li>
@@ -13,13 +13,12 @@
               </ul>
             </div>
           </div>
-
-          <div class="promotion-box">
+          <div class="promotional-box">
             <div class="photo-container p-0">
               <img src="../src/images//furniture1.jpeg" alt="furniture1" />
-              <div class="promotion-button">
+              <div class="promotional-button">
                 <a href="#" class="btn-main-small"
-                  ><i class="fa fa-shopping-basket"></i>ADD TO CART</a
+                  ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
                 >
               </div>
               <div class="timer mx-1">
@@ -31,7 +30,7 @@
               <h5>Aenean Ru Bristique</h5>
               <div class="stars">
                 <a href="#" class="full"></a> <a href="#" class="full"></a>
-                <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                <a href="#"></a><a href="#"></a> <a href="#"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -50,25 +49,17 @@
         </div>
       </div>
       <div class="col-8 slider">
-        <div class="slider-wrapper">
-          <div class="col-auto h-1 p-0">
-            <img
-              src="../src/images/furniture2.jpeg"
-              class="img-fluid"
-              alt="First slide"
-            />
-            <div class="promotion-title">
-              <!-- <div class="opacity-curtain">test</div> -->
-              <h3>indoor furniture</h3>
-              <p>Save up to 50% of all furniture</p>
-              <div class="btn-main no-hover shop-button">shop now</div>
-            </div>
+        <div class="promotional-wrapper">
+          <div class="promotional-title">
+            <h1 class="promotional-slogan">indoor <span>furniture</span></h1>
+            <p class="mb-4">Save up to 50% of all furniture</p>
+            <div><a href="#" class="btn-main no-hover">shop now</a></div>
           </div>
-          <div class="row slider-row">
-            <div class="col-6 control-left pr-0">
+          <div class="row slider-row m-0">
+            <div class="col-6 control-arrow p-0">
               <a href="#"><i class="fas fa-angle-left"></i></a>
             </div>
-            <div class="col-6 control-right pl-0">
+            <div class="col-6 control-arrow p-0">
               <a href="#"><i class="fas fa-angle-right"></i></a>
             </div>
           </div>
