--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -2,7 +2,7 @@
   margin-top: 40px;
 
   .wrapper {
-    border: 1px solid #b6b6b6;
+    border: 1px solid $wrapper-border-color;
     text-align: center;
   }
 
@@ -22,12 +22,12 @@
       display: inline-flex;
       justify-content: center;
       align-items: center;
-      border: 1px solid #b6b6b6;
+      border: 1px solid $wrapper-border-color;
     }
 
     &::before {
       content: "";
-      border: 1px solid #b6b6b6;
+      border: 1px solid $wrapper-border-color;
       position: absolute;
       top: 50%;
       left: 50%;
