Update css classes (WDP190203-10)

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -56,19 +56,19 @@
           <form action="" class="search-form">
             <div class="category">
               <nav>
-                <ul>
+                <ul class="topmenu">
                   <li>
                     <a href="#"
                       ><i class="fas fa-list-ul"></i>Selecta a Category<i
                         class="fas fa-caret-down"
                       ></i
                     ></a>
-                    <ul>
+                    <ul class="submenu">
                       <li><a href="#">Option</a></li>
                       <li><a href="#">Option</a></li>
                       <li>
                         <a href="#">Option</a>
-                        <ul>
+                        <ul class="submenu">
                           <li><a href="#">Option2</a></li>
                           <li><a href="#">Option2</a></li>
                         </ul>
