Update css classes (WDP190203-10)

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -207,12 +207,11 @@ header {
           outline: none;
         }
       }
-
       nav {
         text-align: center;
         font-size: 1rem;
         z-index: 1;
-        ul {
+        .topmenu {
           text-align: center;
           background: $white;
           list-style: none;
@@ -232,24 +231,24 @@ header {
                 color: white;
               }
             }
-            &:hover > ul,
-            nav ul li:hover > ul li a {
+            &:hover > .submenu,
+            nav .topmenu li:hover > .topmenu li a {
               display: block;
               color: $form-border-color;
             }
             &:hover > a {
               background: $primary;
               color: white;
-              // Dlaczego 'Color: white' działa na 'fa-caret-down' a nie dziala na 'fa-list-ul'?
               i:first-child {
                 color: white;
               }
             }
           }
-          ul {
+          .submenu {
             display: none;
             margin: 0;
             border: 1px solid $form-border-color;
+            list-style: none;
             background: white;
             border-radius: 0px;
             padding: 0;
@@ -261,7 +260,7 @@ header {
               min-width: 240px;
               position: relative;
             }
-            ul {
+            .submenu {
               position: absolute;
               left: 100%;
               top: 0;
