--- a/src/partials/20_section-promotional.html
+++ b/src/partials/20_section-promotional.html
@@ -15,7 +15,13 @@
           </div>
           <div class="promotional-box">
             <div class="photo-container p-0">
-              <img src="../src/images//furniture1.jpeg" alt="furniture1" />
+              <div class="carousel__container tns">
+                <div class="slide">
+                  <div class="slide__item">
+                    <img src="../src/images//furniture1.jpeg" alt="furniture1" />
+                  </div>
+                </div>
+              </div>
               <div class="promotional-button">
                 <a href="#" class="btn-main-small"
                   ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
