--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -13,10 +13,15 @@
           </ul>
         </div>
         <div class="col-auto dots">
-          <ul>
-            <li><a href="#" class="active"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+          <ul class="furniture-carousel-nav">
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
           </ul>
         </div>
       </div>
