--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -17,9 +17,8 @@
                     aria-controls="featured"
                     role="tab"
                     data-toggle="tab"
+                    >FEATURED</a
                   >
-                    FEATURED
-                  </a>
                 </li>
                 <li role="presentation" class="tab-list-element active">
                   <a
@@ -28,9 +27,8 @@
                     aria-controls="top-seller"
                     role="tab"
                     data-toggle="tab"
+                    >TOP SELLER</a
                   >
-                    TOP SELLER
-                  </a>
                 </li>
                 <li role="presentation" class="tab-list-element">
                   <a
@@ -38,9 +36,8 @@
                     aria-controls="sale-off"
                     role="tab"
                     data-toggle="tab"
+                    >SALE OFF</a
                   >
-                    SALE OFF
-                  </a>
                 </li>
                 <li role="presentation" class="tab-list-element">
                   <a
@@ -48,13 +45,11 @@
                     aria-controls="top-rated"
                     role="tab"
                     data-toggle="tab"
+                    >TOP RATED</a
                   >
-                    TOP RATED
-                  </a>
                 </li>
               </ul>
 
-              <!-- Tab panes -->
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane" id="featured">
                   <div class="tabpanel-content">
@@ -65,9 +60,8 @@
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Add to favourite"
-                      >
-                        <i class="far fa-heart"></i>
-                      </a>
+                        ><i class="far fa-heart"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
@@ -75,28 +69,25 @@
                         data-placement="right"
                         title="Share"
                       >
-                        <i class="fas fa-exchange-alt"></i>
-                      </a>
+                        <i class="fas fa-exchange-alt"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Open In New Window"
-                      >
-                        <i class="fas fa-eye"></i>
-                      </a>
+                        ><i class="fas fa-eye"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Add To Cart"
-                      >
-                        <i class="fas fa-shopping-basket"></i>
-                      </a>
+                        ><i class="fas fa-shopping-basket"></i
+                      ></a>
                     </div>
-
                     <div class="product-info">
                       <div class="price-circle">
                         <span class="new-price">$120.00</span>
@@ -109,16 +100,14 @@
                       </div>
                     </div>
                     <div class="img-box"></div>
-
                     <div
                       id="carousel-example-generic"
                       class="carousel slide product-carousel"
                       data-ride="carousel"
                     >
-                      <!-- Wrapper for slides -->
                       <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                          <img src="images/black-crown.png" alt="..." />
+                          <img src="images/rocker-recliner.png" alt="..." />
                         </div>
                         <div class="item">
                           <img src="images/black-chair.png" alt="..." />
@@ -138,8 +127,6 @@
                           <img src="images/black-chair.png" alt="..." />
                         </div>
                       </div>
-
-                      <!-- Controls -->
                       <a
                         class="left carousel-control"
                         href="#carousel-example-generic"
@@ -155,6 +142,7 @@
                     </div>
                   </div>
                 </div>
+
                 <div role="tabpanel" class="tab-pane active" id="top-seller">
                   <div class="tabpanel-content">
                     <div class="outlines presentation-outlines">
@@ -164,9 +152,8 @@
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Add to favourite"
-                      >
-                        <i class="far fa-heart"></i>
-                      </a>
+                        ><i class="far fa-heart"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
@@ -174,28 +161,25 @@
                         data-placement="right"
                         title="Share"
                       >
-                        <i class="fas fa-exchange-alt"></i>
-                      </a>
+                        <i class="fas fa-exchange-alt"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Open In New Window"
-                      >
-                        <i class="fas fa-eye"></i>
-                      </a>
+                        ><i class="fas fa-eye"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Add To Cart"
-                      >
-                        <i class="fas fa-shopping-basket"></i>
-                      </a>
+                        ><i class="fas fa-shopping-basket"></i
+                      ></a>
                     </div>
-
                     <div class="product-info">
                       <div class="price-circle">
                         <span class="new-price">$120.00</span>
@@ -208,13 +192,11 @@
                       </div>
                     </div>
                     <div class="img-box"></div>
-
                     <div
                       id="carousel-example-generic"
                       class="carousel slide product-carousel"
                       data-ride="carousel"
                     >
-                      <!-- Wrapper for slides -->
                       <div class="carousel-inner" role="listbox">
                         <div class="item active">
                           <img src="images/black-crown.png" alt="..." />
@@ -237,8 +219,6 @@
                           <img src="images/black-chair.png" alt="..." />
                         </div>
                       </div>
-
-                      <!-- Controls -->
                       <a
                         class="left carousel-control"
                         href="#carousel-example-generic"
@@ -264,9 +244,8 @@
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Add to favourite"
-                      >
-                        <i class="far fa-heart"></i>
-                      </a>
+                        ><i class="far fa-heart"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
@@ -274,28 +253,25 @@
                         data-placement="right"
                         title="Share"
                       >
-                        <i class="fas fa-exchange-alt"></i>
-                      </a>
+                        <i class="fas fa-exchange-alt"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Open In New Window"
-                      >
-                        <i class="fas fa-eye"></i>
-                      </a>
+                        ><i class="fas fa-eye"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Add To Cart"
-                      >
-                        <i class="fas fa-shopping-basket"></i>
-                      </a>
+                        ><i class="fas fa-shopping-basket"></i
+                      ></a>
                     </div>
-
                     <div class="product-info">
                       <div class="price-circle">
                         <span class="new-price">$120.00</span>
@@ -308,16 +284,14 @@
                       </div>
                     </div>
                     <div class="img-box"></div>
-
                     <div
                       id="carousel-example-generic"
                       class="carousel slide product-carousel"
                       data-ride="carousel"
                     >
-                      <!-- Wrapper for slides -->
                       <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                          <img src="images/black-crown.png" alt="..." />
+                          <img src="images/gray-chair.png" alt="..." />
                         </div>
                         <div class="item">
                           <img src="images/black-chair.png" alt="..." />
@@ -337,8 +311,6 @@
                           <img src="images/black-chair.png" alt="..." />
                         </div>
                       </div>
-
-                      <!-- Controls -->
                       <a
                         class="left carousel-control"
                         href="#carousel-example-generic"
@@ -354,6 +326,7 @@
                     </div>
                   </div>
                 </div>
+
                 <div role="tabpanel" class="tab-pane" id="top-rated">
                   <div class="tabpanel-content">
                     <div class="outlines presentation-outlines">
@@ -363,9 +336,8 @@
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Add to favourite"
-                      >
-                        <i class="far fa-heart"></i>
-                      </a>
+                        ><i class="far fa-heart"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
@@ -373,28 +345,25 @@
                         data-placement="right"
                         title="Share"
                       >
-                        <i class="fas fa-exchange-alt"></i>
-                      </a>
+                        <i class="fas fa-exchange-alt"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Open In New Window"
-                      >
-                        <i class="fas fa-eye"></i>
-                      </a>
+                        ><i class="fas fa-eye"></i
+                      ></a>
                       <a
                         href="#"
                         class="btn-outline"
                         data-toggle="tooltip"
                         data-placement="right"
                         title="Add To Cart"
-                      >
-                        <i class="fas fa-shopping-basket"></i>
-                      </a>
+                        ><i class="fas fa-shopping-basket"></i
+                      ></a>
                     </div>
-
                     <div class="product-info">
                       <div class="price-circle">
                         <span class="new-price">$120.00</span>
@@ -407,16 +376,14 @@
                       </div>
                     </div>
                     <div class="img-box"></div>
-
                     <div
                       id="carousel-example-generic"
                       class="carousel slide product-carousel"
                       data-ride="carousel"
                     >
-                      <!-- Wrapper for slides -->
                       <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                          <img src="images/black-crown.png" alt="..." />
+                          <img src="images/thumbimag.png" alt="..." />
                         </div>
                         <div class="item">
                           <img src="images/black-chair.png" alt="..." />
@@ -436,8 +403,6 @@
                           <img src="images/black-chair.png" alt="..." />
                         </div>
                       </div>
-
-                      <!-- Controls -->
                       <a
                         class="left carousel-control"
                         href="#carousel-example-generic"
