--- a/src/partials/20_section-featured.html
+++ b/src/partials/20_section-featured.html
@@ -12,8 +12,8 @@
             </div>
           </div>
           <div class="featured-photo">
-            <a class="btn-main" href="#" id="cart-btn"
-              ><i class="fa fa-shopping-basket"></i> ADD TO CART
+            <a class="btn-main cart-btn" href="#">
+              <i class="fa fa-shopping-basket"></i> ADD TO CART
             </a>
             <div class="counters">
               <div class="counter">
