--- a/src/sass/components/_featured.scss
+++ b/src/sass/components/_featured.scss
@@ -3,7 +3,7 @@
 }
 .section-featured {
   margin-top: 50px;
-  #cart-btn {
+  .cart-btn {
     position: absolute;
     left: 50%;
     top: 30%;
@@ -12,7 +12,7 @@
     padding: 10px 20px;
   }
   .product-box:hover {
-    #cart-btn {
+    .cart-btn {
       display: inherit;
     }
     .counters {
@@ -122,8 +122,8 @@
 
     break {
       flex-basis: 100%;
-      width: 0px;
-      height: 0px;
+      width: 0;
+      height: 0;
       overflow: hidden;
     }
   }
