Add hot-deals slider

--- a/src/partials/20_section-promotional.html
+++ b/src/partials/20_section-promotional.html
@@ -23,7 +23,7 @@
                   <img src="../src/images//furniture2.jpeg" alt="furniture2" />
                 </div>
                 <div class="slide-item">
-                  <img src="../src/images//furniture.jpeg" alt="furniture3" />
+                  <img src="../src/images//furniture3.jpeg" alt="furniture3" />
                 </div>
               </div>
               <div class="promotional-button">
