Reduce sass nesting in top-bar

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -3,27 +3,31 @@
     <div class="container">
       <div class="row">
         <div class="col-8 col-sm-6 text-left">
-          <ul>
-            <li>
+          <ul class="top-bar-menu">
+            <li class="top-bar-menu_item">
               <a href="#">USD <i class="fas fa-caret-down"></i></a>
             </li>
-            <li>
+            <li class="top-bar-menu_item">
               <a href="#">English <i class="fas fa-caret-down"></i></a>
             </li>
-            <li>
+            <li class="top-bar-menu_item">
               <a href="#">Help <i class="fas fa-caret-down"></i></a>
             </li>
           </ul>
         </div>
         <div class="col-4 col-sm-6 text-right">
-          <ul>
-            <li>
-              <a href="#"><i class="fas fa-user"></i><span> Login</span></a>
+          <ul class="top-bar-menu">
+            <li class="top-bar-menu_item">
+              <a href="#"
+                ><i class="fas fa-user"></i><span class="icon-label"> Login</span></a
+              >
             </li>
-            <li>
-              <a href="#"><i class="fas fa-lock"></i><span> Register</span></a>
+            <li class="top-bar-menu_item">
+              <a href="#"
+                ><i class="fas fa-lock"></i><span class="icon-label"> Register</span></a
+              >
             </li>
-            <li>
+            <li class="top-bar-menu_item">
               <a href="#"><i class="fas fa-bars"></i></a>
             </li>
           </ul>
