--- a/src/partials/70_section-blog-posts.html
+++ b/src/partials/70_section-blog-posts.html
@@ -6,9 +6,9 @@
         <div class="col"></div>
         <div class="col-auto dots">
           <ul>
-            <li><span></span></li>
-            <li><span></span></li>
-            <li><span></span></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
           </ul>
         </div>
       </div>
