--- a/src/partials/20_section-promotional.html
+++ b/src/partials/20_section-promotional.html
@@ -1,15 +1,15 @@
 <div class="section-promotional">
   <div class="container ">
-    <div class="row">
+    <div class="row column-row">
       <div class="col-4 ">
         <div class="mr-1 product-card">
           <div class="panel">
             <div class="col-auto heading"><h5>Hot deals</h5></div>
             <div class="promotional-dots">
               <ul class="hot-deals-carousel-nav">
-                <li><span></span></li>
-                <li><span></span></li>
-                <li><span></span></li>
+                <li><a></a></li>
+                <li><a></a></li>
+                <li><a></a></li>
               </ul>
             </div>
           </div>
@@ -60,6 +60,17 @@
       </div>
       <div class="col-8 slider">
         <div class="promotional-wrapper">
+          <div class="promotional-slider row">
+            <div class="slide-img">
+              <img src="../src/images/furniture5.jpeg" alt="furniture5" />
+            </div>
+            <div class="slide-img">
+              <img src="../src/images/furniture4.jpeg" alt="furniture4" />
+            </div>
+            <div class="slide-img">
+              <img src="../src/images/furniture1.jpeg" alt="furniture1" />
+            </div>
+          </div>
           <div class="promotional-title">
             <h1 class="promotional-slogan">indoor <span>furniture</span></h1>
             <p class="mb-4">Save up to 50% of all furniture</p>
@@ -67,10 +78,10 @@
           </div>
           <div class="row slider-row m-0">
             <div class="col-6 control-arrow p-0">
-              <a href="#"><i class="fas fa-angle-left"></i></a>
+              <a><i class="fas fa-angle-left"></i></a>
             </div>
             <div class="col-6 control-arrow p-0">
-              <a href="#"><i class="fas fa-angle-right"></i></a>
+              <a><i class="fas fa-angle-right"></i></a>
             </div>
           </div>
         </div>
