--- a/src/sass/components/_section-promotional.scss
+++ b/src/sass/components/_section-promotional.scss
@@ -31,7 +31,7 @@
           display: inline-block;
           margin-left: 0.5rem;
 
-          span {
+          a {
             display: block;
             width: 13px;
             height: 13px;
@@ -47,12 +47,14 @@
       }
     }
     .tns-nav-active {
-      span {
+      a {
         background-color: $primary;
       }
     }
-    .carousel-hot-deals {
-      flex-wrap: nowrap;
+
+    .tns-visually-hidden,
+    .tns-liveregion {
+      display: none !important;
     }
   }
   .promotional-box {
@@ -173,17 +175,32 @@
   overflow: hidden;
 
   .promotional-wrapper {
-    background-image: url("../images/furniture2.jpeg");
-    background: {
-      size: cover;
-      repeat: no-repeat;
-      position: center center;
+    // background-image: url("../images/furniture2.jpeg");
+    // background: {
+    //   size: cover;
+    //   repeat: no-repeat;
+    //   position: center center;
+    // }
+    overflow: hidden;
+
+    .promotional-slider {
+      position: relative;
+      overflow: hidden;
+      .slide-img {
+        overflow: hidden;
+        width: 100%;
+
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+          overflow: hidden;
+        }
+      }
     }
-    height: 100%;
-    position: relative;
   }
 
-  .promotional-wrapper:before {
+  .promotional-slider:before {
     content: "";
     position: absolute;
     height: 80%;
@@ -244,4 +261,9 @@
       }
     }
   }
+}
+
+.tns-visually-hidden,
+.tns-nav {
+  display: none !important;
 }
